k8syaml/jenkins/jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cicd
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:2.414.3
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
          - containerPort: 50000
        volumeMounts:
        - name: jenkins-pv
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-pv
        persistentVolumeClaim:
          claimName: jenkins-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: cicd
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 8080
  type: LoadBalancer
