k8syaml/jenkins/jenkinsStorageClassName.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cicd
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:2.414.3
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
          - containerPort: 50000
        volumeMounts:
        - name: data
          mountPath: /var/jenkins_home
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: jenkins-pv-data

---
apiVersion: v1
kind: Service
metadata:
  namespace: cicd
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 8080
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: cicd
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: cicd.jenkins.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: Prefix
